--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,12 @@
 title: Marcel Oomens
 subtitle: itinerant technologist and programmer
 description: "Itinerant technologist and programmer, news junkie, long-distance runner, collects books and has a love for travel and languages."
+avatar: "/images/avatar.jpg"
 email: mail@marceloomens.com
 mobile: +86 159 0102 7274
-baseurl: ""
-url: "http://marceloomens.com"
+baseurl: "http://www.marceloomens.com"
+url: "www.marceloomens.com"
+timezone: Asia/Shanghai
 twitter_username: marceloomens
 github_username:  marceloomens
 
