--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "Itinerant technologist and programmer, news junkie, long-distance 
 avatar: "/images/avatar.jpg"
 email: mail@marceloomens.com
 mobile: +86 159 0102 7274
-baseurl: "http://www.marceloomens.com"
+baseurl: "/"
 url: "www.marceloomens.com"
 timezone: Asia/Shanghai
 twitter_username: marceloomens
